--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
-    "start:prod": "npm run build && npm start",
-    "postinstall": "npm run build"
+    "start": "node dist/server.js"
   },
   "engines": {
     "node": ">=18.0.0"
